2009-06-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11354: Extension manager does not show up Configuration Categories Menu (thanks to Vladimir Podkovanov)

2009-06-24  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #9599: felogin - forget password action and logout action are still cached

2009-06-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11369: jumpUrl should only allow files matching fileDenyPattern (thanks to Ingmar Schlecht)
	* Follow-up to #9897: Rename some internal variable and function names
	* Fix bug #9897: Extending palettes and fields to be displayed in back-end forms mixes up tabs
	* Follow-up to #11358: Minor cleanup
	* Fixed bug #10791: Performance improvement: Skip cHash check if page is already non-cached
	* Fixed bug #11368: Ignore ENABLE_INSTALL_TOOL file if it is older than one hour

2009-06-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11377: synced extJs resources with extJs 3.0RC2, removed skins and unused css/images

2009-06-22  Sebastian Kurfürst <sebastian@typo3.org>

	* Included up-to date Extbase and Fluid (revision 844, before it was 680). Lots of changes during the last development period starting at the developer days. 

2009-06-22  Steffen Kamper  <info@sk-typo3.de>

	* Replaced icon #11371: The current clear page cache icon is ugly and unclear (thanks to Uschi Renzihausen)

2009-06-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11372: Template-Analyzer uses hardcoded texts - added localization (thanks to Christopher Stelmaszyk)

2009-06-21  Benjamin Mack  <benni@typo3.org>

	* Fixed #11356: Backend Login News is not templateable

2009-06-21  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11358: typoLink() perfomance improvement (thanks to Vladimir Podkovanov)

2009-05-18  Benjamin Mack  <benni@typo3.org>

	* Fixed bug / Feature #11293: Login page is not translatable

2009-05-18  Oliver Hader  <oliver@typo3.org>
