@@ -151,7 +151,7 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 			$this->doc->getContextMenuCode();
 
 				// Build the modulle content
-			$this->content = $this->doc->header('Template Tools');
+			$this->content = $this->doc->header($GLOBALS['LANG']->getLL('moduleTitle', true));
 			$this->extObjContent();
 			$this->content .= $this->doc->spacer(10);
 
@@ -192,17 +192,17 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 
 			$lines = array();
 			$lines[] = '<tr class="c-headLineTable">
-				<td nowrap>Page name</td>
-				<td nowrap># Templates</td>
-				<td nowrap>Is Root?</td>
-				<td nowrap>Is Ext?</td>
+				<td nowrap>' . $GLOBALS['LANG']->getLL('pageName', true) . '</td>
+				<td nowrap>' . $GLOBALS['LANG']->getLL('templates', true) . '</td>
+				<td nowrap>' . $GLOBALS['LANG']->getLL('isRoot', true) . '</td>
+				<td nowrap>' . $GLOBALS['LANG']->getLL('isExt', true) . '</td>
 				</tr>';
 			$lines = array_merge($lines, $this->renderList($pArray));
 
 			$table = '<table border="0" cellpadding="0" cellspacing="1" id="ts-overview">' . implode('', $lines) . '</table>';
 			$this->content = $this->doc->section($GLOBALS['LANG']->getLL('moduleTitle', true), '
 			<br />
-			This is an overview of the pages in the database containing one or more template records. Click a page title to go to the page.
+			' . $GLOBALS['LANG']->getLL('overview', true) . '
 			<br /><br />' . $table);
 
 			// ********************************************
@@ -348,12 +348,13 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 		$tmpl->tt_track = false;	// Do not log time-performance information
 		$tmpl->init();
 
-		$confirm = ' onClick="return confirm(\'Are you sure you want to do this?\');"';
+		$areYouSure = $GLOBALS['LANG']->getLL('areYouSure', true);
+		$confirm = ' onClick="return confirm(\'' . $areYouSure . '\');"';
 
 			// No template
 		$theOutput .= $this->doc->spacer(10);
-		$theOutput .= $this->doc->section('<span class="typo3-red">No template</span>', "There was no template on this page!<br />
-			Create a template record first in order to edit constants!", 0, 0, 0, 1);
+		$theOutput .= $this->doc->section('<span class="typo3-red">' . $GLOBALS['LANG']->getLL('noTemplate', true) . '</span>', $GLOBALS['LANG']->getLL('noTemplateDescription', true) . '<br />
+			' . $GLOBALS['LANG']->getLL('createTemplate', true), 0, 0, 0, 1);
 
 			// New standard?
 		if ($newStandardTemplate) {
@@ -368,22 +369,22 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 
 				// Extension?
 			$theOutput .= $this->doc->spacer(10);
-			$theOutput .= $this->doc->section('Create new website', 'If you want this page to be the root of a new website, optionally based on one of the standard templates, then press the button below:<br />
+			$theOutput .= $this->doc->section($GLOBALS['LANG']->getLL('newWebsite', true), $GLOBALS['LANG']->getLL('newWebsiteDescription', true) . '<br />
 			<br />' .
 			$selector . '<br />
 			<img' . t3lib_iconWorks::skinImg($GLOBALS['BACK_PATH'], 'gfx/icon_warning.gif', 'width="18" height="16"') . ' hspace="5" align="top">
-			<input type="Submit" name="newWebsite" value="Create template for a new site"' . $confirm . '>', 0, 1);
+			<input type="Submit" name="newWebsite" value="' . $GLOBALS['LANG']->getLL('newWebsiteAction', true) . '"' . $confirm . '>', 0, 1);
 		}
 			// Extension?
 		$theOutput .= $this->doc->spacer(10);
-		$theOutput .= $this->doc->section('Create extension template', 'An extension template allows you to enter TypoScript values that will affect only this page and subpages.<BR><BR><img' . t3lib_iconWorks::skinImg($GLOBALS['BACK_PATH'], 'gfx/icon_warning.gif', 'width="18" height="16"') . ' hspace="5" align="top"><input type="submit" name="createExtension" value="Click here to create an extension template."' . $confirm . '>', 0, 1);
+		$theOutput .= $this->doc->section($GLOBALS['LANG']->getLL('extTemplate', true), $GLOBALS['LANG']->getLL('extTemplateDescription', true) . '<BR><BR><img' . t3lib_iconWorks::skinImg($GLOBALS['BACK_PATH'], 'gfx/icon_warning.gif', 'width="18" height="16"') . ' hspace="5" align="top"><input type="submit" name="createExtension" value="' . $GLOBALS['LANG']->getLL('extTemplateAction', true) . '"' . $confirm . '>', 0, 1);
 
 			// Go to first appearing...
 		$first = $tmpl->ext_prevPageWithTemplate($this->id, $this->perms_clause);
 		if ($first) {
 			$theOutput .= $this->doc->spacer(10);
-			$theOutput .= $this->doc->section('Go to closest page with template',
-					sprintf('Closest template is on page \'%s\' (uid %s).<br /><br />%s<strong>Click here to go.</strong>%s', $first['title'], $first['uid'],
+			$theOutput .= $this->doc->section($GLOBALS['LANG']->getLL('goToClosest', true),
+					sprintf($GLOBALS['LANG']->getLL('goToClosestDescription', true) . '<br /><br />%s<strong>' . $GLOBALS['LANG']->getLL('goToClosestAction', true) . '</strong>%s', $first['title'], $first['uid'],
 					'<a href="index.php?id=' . $first['uid'] . '">', '</a>'), 0, 1);
 		}
 		return $theOutput;
@@ -434,7 +435,7 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 				$staticT = intval(t3lib_div::_GP('createStandard'));
 				$recData['sys_template']['NEW'] = array(
 					'pid' => $id,
-					'title' => 'NEW SITE, based on standard',
+					'title' => $GLOBALS['LANG']->getLL('titleNewSiteStandard', true),
 					'sorting' => 0,
 					'root' => 1,
 					'clear' => 3,
@@ -443,7 +444,7 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 			} else {
 				$recData['sys_template']['NEW'] = array(
 					'pid' => $id,
-					'title' => 'NEW SITE',
+					'title' => $GLOBALS['LANG']->getLL('titleNewSite', true),
 					'sorting' => 0,
 					'root' => 1,
 					'clear' => 3,
