@@ -7,7 +7,27 @@
 	<data type="array">
 		<languageKey index="default" type="array">
 			<label index="moduleTitle">Template tools</label>
-			<label index="viewTemplates">Viewing templates of</label>moduleTitle
+			<label index="viewTemplates">Viewing templates of</label>
+			<label index="pageName">Page name</label>
+			<label index="templates"># Templates</label>
+			<label index="isRoot">Is Root?</label>
+			<label index="isExt">Is Ext?</label>
+			<label index="overview">This is an overview of the pages in the database containing one or more template records. Click a page title to go to the page.</label>
+			<label index="areYouSure">Are you sure you want to do this?</label>
+			<label index="noTemplate">No template</label>
+			<label index="noTemplateDescription">There was no template on this page!</label>
+			<label index="createTemplate">Create a template record first in order to edit constants!</label>
+			<label index="newWebsite">Create new website</label>
+			<label index="newWebsiteDescription">If you want this page to be the root of a new website, optionally based on one of the standard templates, then press the button below:</label>
+			<label index="newWebsiteAction">Create template for a new site</label>
+			<label index="extTemplate">Create extension template</label>
+			<label index="extTemplateDescription">An extension template allows you to enter TypoScript values that will affect only this page and subpages.</label>
+			<label index="extTemplateAction">Click here to create an extension template.</label>
+			<label index="goToClosest">Go to closest page with template</label>
+			<label index="goToClosestDescription">Closest template is on page '%s' (uid %s).</label>
+			<label index="goToClosestAction">Click here to go.</label>
+			<label index="titleNewSiteStandard">NEW SITE, based on standard</label>
+			<label index="titleNewSite">NEW SITE</label>
 		</languageKey>
 	</data>
 </T3locallang>
